# task-api

./: Cargo.toml  README.md  tasks.db
.sqlx/: query-1a25be2d5014799eb6d84c7ba0373375f5d6a80ebbbcde10b0ffe23d2473ffa0.json  query-45f63b423813b4f1d0c838db1b5febcb8a3761dd3ffd701597364e573302663d.json  query-9f5116f0c7f31bb0a2afb788bde4706065f7e7d215a50bb5bcccc594012fbccc.json  query-c066d292af9cf094618df2e458110a0b344f0ca653f53b2a90061123c1b33a16.json  query-f7a492ffcd4291536dca43a4a0a39768d8511233e8e26cbf19c38370f3a0dc37.json
migrations/: 20250716111041_create_tasks.sql
src/: errors.rs  main.rs  state.rs
src/models/: task.rs
src/routes/: tasks.rs
