[package]
name = "task-api"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["sqlite", "chrono", "uuid", "macros", "runtime-tokio-native-tls"] }
# tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
reqwest = "0.12.22"
